git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_2.x/Server/trunk@12068 99afaf0d-6903-0410-885a-c66a8bbb5f81